--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,10 @@
 <header>
   <div class="container">
-    <a href="/"><img src="{{ `images/logo/logo.png` | relURL }}" /></a>
+    <a href="/latata.tejidos/"><img src="{{ `images/logo/logo.png` | relURL }}" /></a>
+    <div class="menu-bar">
+    Menu
+<img src="/latata.tejidos/images/logo/logo-menu.svg" alt="Logo" class="logo-svg">
+  </div>
     <div class="right-stuff">
       <div class="header__cart">
         <a href="#" class="snipcart-checkout">
