--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,7 +19,7 @@
       <div class="instagram">
         <i class="fab fa-lg fa-instagram"></i>&nbsp;<a
           href="https://instagram.com/{{ .Site.Params.Instagram }}"
-          >{{ .Site.Params.Instagram }}</a
+          >Mi Instagram</a
         >
       </div>
     </div>
