--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,21 @@
 <header>
+  <div class="overlay"></div> 
   <div class="container">
     <a href="/latata.tejidos/"><img src="{{ `images/logo/logo.png` | relURL }}" /></a>
-    <div class="menu-bar">
-    Menu
-<img src="/latata.tejidos/images/logo/logo-menu.svg" alt="Logo" class="logo-svg">
-  </div>
+<label for="menu-toggle" class="menu-bar">
+  Menu
+  <img src="/latata.tejidos/images/logo/logo-menu.svg" alt="Logo" class="logo-svg">
+</label>
+
+<input type="checkbox" id="menu-toggle" style="display: none;" />
+
+<ul class="menu-menu">
+  <li><a href="/latata.tejidos/">Home</a></li>
+  <li><a href="#">Proyectos</a></li>
+  <li><a href="#">Cursos</a></li>
+  <li><a href="#">Videos</a></li>
+</ul>
+
     <div class="right-stuff">
       <div class="header__cart">
         <a href="#" class="snipcart-checkout">
