--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,9 +11,9 @@
 
 <ul class="menu-menu">
   <li><a href="/latata.tejidos/">Home</a></li>
-  <li><a href="#">Proyectos</a></li>
-  <li><a href="#">Cursos</a></li>
-  <li><a href="#">Videos</a></li>
+  <li><a href="{{ "proyectos" | relURL }}">Proyectos</a></li>
+  <li><a href="{{ "cursos" | relURL }}">Cursos</a></li>
+  <li><a href="{{ "videos" | relURL }}">Videos</a></li>
 </ul>
 
     <div class="right-stuff">
