--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,9 @@
       <div class="container">
         <div class="products flex-grid">
           {{ range .Pages.ByDate }}
+          {{ if not (in .Params.categories "menu") }}
             {{ partial "product.html" .Params }}
+            {{ end }}
           {{ end }}
         </div>
       </div>
