--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -68,6 +68,7 @@
     {{ with .Params.forestry_instant_preview_id }}
       {{- safeHTML (printf "<meta property='forestry_instant_preview_id' content='%s'>" .) -}}
     {{ end -}}
+    <link rel="stylesheet" type="text/css" href="{{ `css/proyectos.css` | relURL }}" />
     <link rel="stylesheet" type="text/css" href="{{ `css/videos.css` | relURL }}" />
     <link rel="stylesheet" type="text/css" href="{{ `css/style.css` | relURL }}" />
   </head>
