--- a/layouts/proyectos/single.html
+++ b/layouts/proyectos/single.html
@@ -1,6 +1,18 @@
 {{ define "main" }}
-  <main>
-    <h1>{{ .Title }}</h1>
-    <p>Contenido de Proyectos desde Single.html</p>
-  </main>
+    <h1>Proyectos</h1>
+
+    <div class="projects-grid">
+        {{ range .Site.Data.proyectos.proyectos }}
+            <div class="project-item">
+                <!-- Combinamos baseUrl con el fileId y mostramos la miniatura -->
+                <a href="https://mega.nz/file/{{ .fileId }}#{{ .key }}" target="_blank">
+                    <div class="project-thumbnail">
+                        <!-- Usamos la ruta de la imagen almacenada en 'image-id' -->
+                        <img src="{{ .imageid }}" alt="{{ .title }}">
+                    </div>
+                    <p>{{ .title }}</p>
+                </a>
+            </div>
+        {{ end }}
+    </div>
 {{ end }}
